--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url('normalize.css');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wdth,wght@62.5..100,100..900&display=swap');
+@import url('css/swiper-bundle.min.css');
+
 * {
   box-sizing: border-box;
 }
@@ -53,7 +57,6 @@ body {
 .phone-icon {
   fill: #5c8ee6;
 }
-
 .logo-svg {
   width: 9rem;
   height: 2.75rem;
@@ -64,8 +67,11 @@ body {
 .header {
   padding: 2.4rem;
 }
+.no-webp .header-image {
+  background-image: url("../img/header-bg.png");
+}
 .header-image {
-  background-image: url(../img/header-bg.png);
+  background-image: url("../img/header-bg.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left bottom 0.9375rem;
@@ -949,7 +955,24 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
 .alert-modal-image {
   max-height: 82px;
 }
-
+.policy-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 160%;
+  color: #828a99;
+  max-width: 1440px; 
+  max-height: 750px;
+}
+.research-text {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 160%;
+  color: #828a99;
+}
+.columns-2 {
+  column-count: 2;
+}
 
 /* hover effects */
 @media (max-width: 1700px) {
@@ -1177,9 +1200,7 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
   .footer-menu-column-2 {
     columns: 1;
     min-width: 25rem;
-  
   }
-  
   .footer-phone {
     font-size: 1rem;
   }
@@ -1226,7 +1247,7 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
     display: none;
   }
   .cta-form-text {
-    font-size: 1.4rem;
+    font-size: 1.15rem;
   }
   .cta-form-footer {
     display: block;
@@ -1241,11 +1262,10 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
     width: 100%;
   }
   .notify {
-    margin-top: 1rem;
+    margin-top: 2.6rem;
   }
   .notify-text {
     max-width: 100%;
-    font-size: 1.4rem;
   }
   .footer-top {
     display: block;
@@ -1271,11 +1291,11 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
     margin-left: 0;
   }
   .footer-menu-title {
-    font-size: 1.3rem;
+    font-size: 1.15rem;
     margin-left: -1rem;
   }
   .footer-menu-link {
-    font-size: 1.3rem;
+    font-size: 1.15rem;
   }
   .footer-menu-column-2 {
     width: 100%;
@@ -1384,15 +1404,30 @@ input:not(:placeholder-shown).input:not(:focus) ~ .input-group-label {
   .notify {
     margin-top: 1rem;
   }
+  .notify-text {
+    font-size: 1.3rem;
+  }
   .footer-logo {
-    margin-right: 20rem;
+    max-width: 15rem;
+    margin-right: 15rem;
+  }
+  .footer-phone {
+    font-size: 2.3rem;
+  }
+  .footer-info-address {
+    font-size: 1.2rem;
   }
   .footer-menu-list {
     margin-left: -3.3rem;
   }
-  .footer-legal {
+  .footer-wrapper {
     display: block;
   }
+  .footer-legal {
+    margin-bottom: 1rem;
+  }
+  
+
 }
 
 
